--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 "nomedatv":"BIBIL TV ONLINE",
 "carregando":"Carregando Canal. ",
 "escolhe":"VEJA OS CANAIS",
+"nome1":"teste",
+"nome2":"teste",
+"nome3":"teste",
+"nome4":"teste",
+"nome5":"teste",
+"nome6":"teste",
+"nome7":"teste",
+"nome8":"teste",
+"nome9":"teste",
+"nome10":"teste",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
