--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 "nomedatv":"BIBIL TV ONLINE",
 "carregando":"Carregando Canal. ",
 "escolhe":"VEJA OS CANAIS",
-"nome1":"teste",
-"nome2":"teste",
-"nome3":"teste",
-"nome4":"teste",
-"nome5":"teste",
-"nome6":"teste",
-"nome7":"teste",
-"nome8":"teste",
-"nome9":"teste",
-"nome10":"teste",
+"nome1":"Jogos Futbol de Quarta (28/12)",
+"nome2":"Tv Aberta ",
+"nome3":"Infatil",
+"nome4":"Documentarios",
+"nome5":"Estilo de Vida",
+"nome6":"Filmes e Series",
+"nome7":"Esportes",
+"nome8":"Variedades",
+"nome9":"Mostrar Todos os Canais
+"nome10":"",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
