--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 "nome6":"Filmes e Series",
 "nome7":"Esportes",
 "nome8":"Variedades",
-"nome9":"Mostrar Todos os Canais
+"nome9":"Mostrar Todos os Canais",
 "nome10":"",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
