--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 "cancelar":"",
 "link":"https://www.rugalmodzofc.online/", 
 "link2":"https://www.rugalmodzofc.online/",
-"nomedatv":"BIBIL TV ONLINE",
+"nomedatv":"BIBIL TV Player ",
 "carregando":"Carregando Canal. ",
 "escolhe":"VEJA OS CANAIS",
 "nome1":"Jogos Futbol de Quarta (28/12)",
