--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 "nome8":"Variedades",
 "nome9":"Mostrar Todos os Canais",
 "nome10":"",
+"nomedojogo1":"flemengox 2023",
+"nomedojogo2":"flemengox 2023",
+"nomedojogo3":"flemengox 2023",
+"nomedojogo4":"flemengox 2023",
+"nomedojogo5":"flemengox 2023",
+"nomedojogo6":"flemengox 2023",
+"nomedojogo7":"flemengox 2023",
+"nomedojogo8":"flemengox 2023",
+"nomedojogo9":"flemengox 2023",
+"nomedojogo10":"flemengox 2023",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
