--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 "nomedojogo8":"flemengox 2023",
 "nomedojogo9":"flemengox 2023",
 "nomedojogo10":"flemengox 2023",
+"nometvlivre1":"tv aberta",
+"nometvlivre2":"tv aberta",
+"nometvlivre3":"tv aberta",
+"nometvlivre4":"tv aberta",
+"nometvlivre5":"tv aberta",
+"nomeinfantil1":" desenhos ",
+"nomeinfantil2":" desenhos ",
+"nomeinfantil3":" desenhos ",
+"nomeinfantil4":" desenhos ",
+"nomeinfantil5":" desenhos ",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
