--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 "nomeinfantil3":" desenhos ",
 "nomeinfantil4":" desenhos ",
 "nomeinfantil5":" desenhos ",
+"nomedocumentario1":"documentarios canais ",
+"nomedocumentario2":"documentarios canais ",
+"nomedocumentario3":"documentarios canais ",
+"nomedocumentario4":"documentarios canais ",
+"nomedocumentario5":"documentarios canais ",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
