--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 "nomedocumentario3":"documentarios canais ",
 "nomedocumentario4":"documentarios canais ",
 "nomedocumentario5":"documentarios canais ",
+"nomeestilodevida1":"estilo o nome ",
+"nomeestilodevida2":"estilo o nome ",
+"nomeestilodevida3":"estilo o nome ",
+"nomeestilodevida4":"estilo o nome ",
+"nomeestilodevida5":"estilo o nome ",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
