--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 "nomeestilodevida3":"estilo o nome ",
 "nomeestilodevida4":"estilo o nome ",
 "nomeestilodevida5":"estilo o nome ",
+"nomefilmes1":"nome dos filmes",
+"nomefilmes2":"nome dos filmes",
+"nomefilmes3":"nome dos filmes",
+"nomefilmes4":"nome dos filmes",
+"nomefilmes5":"nome dos filmes",
+"nomefilmes6":"nome dos filmes",
 "tvtela":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv1":"http://superthread.b-cdn.net/live/premiereclubes/chunks.m3u8?token=LG8iuTxtoeXTcU8WkU0a_IYjwRyPt6L0DOJlCLtvgH8&expires=1663667856",
 "tv2":"",
