--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 "nomeestilodevida3":"estilo o nome ",
 "nomeestilodevida4":"estilo o nome ",
 "nomeestilodevida5":"estilo o nome ",
-"nomefilmes1":"nome dos filmes",
-"nomefilmes2":"nome dos filmes",
-"nomefilmes3":"nome dos filmes",
-"nomefilmes4":"nome dos filmes",
-"nomefilmes5":"nome dos filmes",
-"nomefilmes6":"nome dos filmes",
+"nomefilmes1":"nome",
+"nomefilmes2":"nome",
+"nomefilmes3":"nome",
+"nomefilmes4":"nome",
+"nomefilmes5":"nome",
+"nomefilmes6":"nome",
 "nomeesportes1":"nome do jogo",
 "nomeesportes2":"nome do jogo",
 "nomeesportes3":"nome do jogo",
