--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 "nome8":"Variedades",
 "nome9":"Mostrar Todos os Canais",
 "nome10":"",
+"documentario":" testando documentos",
 "nomedojogo1":"flemengox 2023",
 "nomedojogo2":"flemengox 2023",
 "nomedojogo3":"flemengox 2023",
