--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 "mensagem":"ATUALIZE SUA TV NOVOS CANAIS DISPONIVEL  !\n\n By : Gabriel Sportings ",
 "ok":"OK",
 "cancelar":"",
-"link":"https://www.rugalmodzofc.online/", 
-"link2":"https://www.rugalmodzofc.online/",
+"link":"https://www.youtube.com/watch?v=VTvIBYUNl9w", 
+"link2":"https://www.youtube.com/watch?v=VTvIBYUNl9w",
 "nomedatv":"BIBIL TV Player ",
 "carregando":"Carregando Canal. ",
 "escolhe":"VEJA OS CANAIS",
